# macro-signal-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  app.py  audit_assets.py  check_data.py  inspect_code.py  pyproject.toml  requirements.txt  trigger_update.py  truncate_data.py  verify_api.py
analysis/: automation_manager.py  backtest_api.py  base_model.py  correlations.py  deep_learning_model.py  feature_engine.py  fix_master_data.py  minor_3d_signal_manager.py  portfolio_manager.py  price_1m_features.py  price_1m_regression.py  price_1w_features.py  price_1w_regression.py  price_3d_features.py  price_3d_models.py  price_3d_regression.py  price_pipeline_adapters.py  price_pipeline_base.py  price_pipeline_common.py  regime_engine.py  regime_forecast.py  regime_predictability.py  sentiment_analysis.py  temp_helper.py
backend/: README.md  __init__.py
backtesting/: data_loader.py  engine.py  signal_generator.py  signal_vectorizer.py  strategies.py  walk_forward.py
config/: settings.py
contracts/: api_contract_manifest.json
data/: README.md  automation_config.example.json  commodities_data.py  etl.py  indicators.py  local_data_loader.py  macro_data.py  market_data.py  sentiment_data.py
requirements/: README.md  research.lock.txt  runtime.lock.txt  test.lock.txt  train.lock.txt
routes/: analysis.py  automation.py  backtest_holdout.py  combination_optimizer.py  ensembling.py  fix_training.py  sequential_training.py  training.py
scripts/: analyze_price1m_holdout_errors.py  analyze_price1w_holdout_errors.py  check_oil.py  (+18 more)
(+90 files in other folders)
